[gd_scene load_steps=2 format=3 uid="uid://2b2pyda07nb8"]

[ext_resource type="Script" uid="uid://byeqct6a0hkuk" path="res://EmployeeManagement.gd" id="1_whw4t"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_whw4t")

[node name="HiringButton" type="Button" parent="."]
layout_mode = 2
offset_left = 473.0
offset_right = 582.0
offset_bottom = 31.0
text = "HiringButton"

[node name="StaffButton" type="Button" parent="."]
layout_mode = 2
offset_left = 629.0
offset_right = 727.0
offset_bottom = 31.0
text = "StaffButton"

[node name="ContentContainer" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
